<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/control_file_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="custom_ctrl_file_data"
            android:title="@string/custom_ctrl_file_data_title"
            android:summaryOn="@string/control_file_option_summary_on"
            android:summaryOff="@string/control_file_option_summary_off"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <io.github.muntashirakon.bcl.settings.ControlFilePreference
            app:iconSpaceReserved="false"
            android:key="control_file"
            android:title="@string/set_control_file"
            android:dialogTitle="@string/select_control_file" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="custom_ctrl_file_setup"
            android:title="@string/custom_ctrl_file_data_setup_title"
            android:enabled="false"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/main_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="theme"
            android:title="Theme"
            android:entryValues="@array/themeKeys"
            android:entries="@array/themeValues"
            android:summary="%1$s" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="notification_sound"
            android:title="@string/notify"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="auto_reset_stats"
            android:title="@string/auto_reset_stats"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="temp_fahrenheit"
            android:title="@string/show_temperature_fahrenheit"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="temp_in_notif"
            android:title="@string/show_temperature_in_notification"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="hide_toast_on_service_changes"
            android:title="@string/hide_toast_on_service_change"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="enforce_charge_limit"
            android:title="@string/enforce_charge_limit"
            android:summary="@string/enforce_charge_limit_desc"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="disable_auto_recharge"
            android:title="@string/disable_auto_recharge"
            android:summary="@string/disable_auto_recharge_desc"
            android:defaultValue="false" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="immediate_power_intent_handling"
            android:title="@string/immediate_power_intent_handling"
            android:summary="@string/immediate_power_intent_handling_desc"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="always_write_cf"
            android:title="@string/always_write_cf"
            android:summary="@string/always_write_cf_desc"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
