<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author"
            android:textColor="?attr/colorOnSurfaceVariant" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/version"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_version"
            android:textColor="?attr/colorOnSurfaceVariant"
            tools:text="1.3.1 (26)" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/license_title"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:text="GNU General Public License v3.0"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/source_code_title"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/source_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:text="https://github.com/MuntashirAkon/BatteryChargeLimiter"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/credits_title"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_details"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>