<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CustomCtrlFileDataActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/scrollView">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/custom_ctrl_file_data_setup_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/path_data_title"
                android:text="@string/custom_ctrl_file_path_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout">

                <io.github.muntashirakon.bcl.CustomEditText
                    android:id="@+id/edit_path_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/custom_ctrl_file_path_hint"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:imeOptions="actionGo"
                    android:imeActionId="666"
                    android:imeActionLabel="Some Label" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/path_on_title"
                android:layout_marginTop="15dp"
                android:text="@string/custom_ctrl_file_enabled_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_path_enabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/custom_ctrl_file_enabled_hint"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:imeOptions="actionGo"
                    android:imeActionId="666"
                    android:imeActionLabel="Some Label" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/path_off_title"
                android:layout_marginTop="15dp"
                android:text="@string/custom_ctrl_file_disabled_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_path_disabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/path_off_title"
                    android:hint="@string/custom_ctrl_file_disabled_hint"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:imeOptions="actionGo"
                    android:imeActionId="666"
                    android:imeActionLabel="Done" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_update_custom"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/custom_ctrl_file_update_data" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:contentPadding="16dp">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/custom_data_title"
                        android:text="@string/current_ctrl_data_title"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/custom_data_updated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:hint="@string/custom_ctrl_file_updated_info"
                        android:textColorHint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ctrl_file_heads_up"
                        android:layout_marginTop="20dp"
                        android:textSize="14sp"
                        android:text="@string/custom_ctrl_file_heads_up"
                        android:textColor="?attr/colorOnSurfaceVariant" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
